--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,80 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
+# Sample localization file for English. Add more files in this directory for other locales.
+# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  title: 'Pestulon'
+  activerecord:
+    models: 
+        user: 
+          one: 'user'
+          other: 'users'
+        identity:
+          one: 'profile'
+          other: 'profiles'
+        role:
+          one: 'role'
+          other: 'roles'
+        subscription:
+          one: 'subscription'
+          other: 'subscriptions'
+        account:
+          one: 'account'
+          other: 'accounts'
+  date:
+    labels:
+        year: 'Year'
+        month: 'Month'
+        week: 'Week'
+        day: 'Day'
+        last2weeks: '2 weeks'
+        last2months: '2 months'
+  shared:
+    messages: 
+      nodata: 'No data availible'
+    labels:
+      flow: 'Flow'
+      new: 'New'
+      stats: 'Statistics'
+      invite: 'Invite'
+      user: 'User'
+      login: "Sign in"
+      logout: "Sign out"
+      registration: "Sign up"
+      choose: 'Choose'
+      statistics: 'Statistics'
+      from: 'begin'
+      to: 'end'
+      outcome: 'Expenses'
+      income: 'Earnings'
+      show: 'Show'
+      alltime: 'All time'
+      all: 'All'
+      bills: 'bills'
+      by: 'by'
+      in_category: 'in category'
+      these_dates: 'These dates'
+      total: 'total'
+      yep: 'yes'
+      nope: 'no'
+      categories: 'Categories'
+      newcategory: 'New category in group'
+      groups&categories: 'Groups and categories'
+      tags: 'Tags'
+      contacts: 'Contacts'
+      pricing: 'Pricing'
+      help: 'Help'
+      privacy: 'Privacy'
+      security: 'Security'
+      eula: 'Terms of Service'
+      copy: 'Copyright 2013 © Pestulon, LLC. All rights reserved. 2007'
+    links:
+      login: "Login"
+      logout: "Logout"
+      register: "Register"
+      password: 'Forgot your password?'
+      confirmation: "Didn't receive confirmation instructions?"
+      unlock: "Didn't receive unlock instructions?"
+      sign_with: 'Sign in with'
+  recaptcha:
+    errors:
+      incorrect-captcha-sol: 'There was an error with the recaptcha code below. Please re-enter the code.'
